progress towards 1.20.1 backport